@@ -24,6 +24,9 @@
 
 	* libfreeipmi/interface/ipmi-rmcpplus-interface.c (_construct_session_trlr_authentication_code):
 	Fix secure memset of unnecessary buffers.
+
+	* libipmiconsole/ipmiconsole_processing.c: Remove secure memset of
+	unnecessary buffers.
 	
 2016-09-29 Albert Chu <chu11@llnl.gov>
 
